# optimization_in_robotics

./: .gitignore  CMakeLists.txt
include/: problem.h  solver.h  spline_path2d.h  spline_problem.h
jupyter_pybind/notebooks/scripts/: test.py
src/: problem.cpp  solver.cpp  spline_path2d.cpp  spline_problem.cpp
test/: test_problem.cpp  test_solver.cpp  test_spline_path2d.cpp  test_spline_problem.cpp
